// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
}

<ul
  class="Accordion Accordion--end"
  data-test-id="cf-ui-accordion"
>
  <li
    class="AccordionItem"
    data-test-id="cf-ui-accordion-item-1"
  >
    <h2
      class="emotion-0"
      data-test-id="cf-ui-subheading"
    >
      <button
        aria-controls="accordion-panel--1"
        aria-expanded="false"
        class="AccordionHeader"
        id="accordion--1"
        type="button"
      >
        <svg
          class="Icon Icon--small Icon--secondary Icon--trimmed AccordionHeader__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 9 18"
          width="1em"
        >
          <path
            d="M1.1 5.9l3.4 3.4 3.4-3.4 1.1 1-4.5 4.5L0 6.9l1.1-1z"
          />
          <path
            d="M0 0h9v18H0V0z"
            fill="none"
          />
        </svg>
        Accordion Title
      </button>
    </h2>
    <div
      aria-hidden="true"
      aria-labelledby="accordion--1"
      class="AccordionPanel"
      id="accordion-panel--1"
      role="region"
    >
      Accordion content
    </div>
  </li>
</ul>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
}

<ul
  class="Accordion my-extra-class Accordion--end"
  data-test-id="cf-ui-accordion"
>
  <li
    class="AccordionItem"
    data-test-id="cf-ui-accordion-item-2"
  >
    <h2
      class="emotion-0"
      data-test-id="cf-ui-subheading"
    >
      <button
        aria-controls="accordion-panel--2"
        aria-expanded="false"
        class="AccordionHeader"
        id="accordion--2"
        type="button"
      >
        <svg
          class="Icon Icon--small Icon--secondary Icon--trimmed AccordionHeader__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 9 18"
          width="1em"
        >
          <path
            d="M1.1 5.9l3.4 3.4 3.4-3.4 1.1 1-4.5 4.5L0 6.9l1.1-1z"
          />
          <path
            d="M0 0h9v18H0V0z"
            fill="none"
          />
        </svg>
        Accordion Title
      </button>
    </h2>
    <div
      aria-hidden="true"
      aria-labelledby="accordion--2"
      class="AccordionPanel"
      id="accordion-panel--2"
      role="region"
    >
      Accordion content
    </div>
  </li>
</ul>
`;

exports[`renders the component with chevron on the left 1`] = `
.emotion-0 {
  display: block;
  margin: 0;
  margin-bottom: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #192532;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
}

<ul
  class="Accordion Accordion--start"
  data-test-id="cf-ui-accordion"
>
  <li
    class="AccordionItem"
    data-test-id="cf-ui-accordion-item-3"
  >
    <h2
      class="emotion-0"
      data-test-id="cf-ui-subheading"
    >
      <button
        aria-controls="accordion-panel--3"
        aria-expanded="false"
        class="AccordionHeader"
        id="accordion--3"
        type="button"
      >
        <svg
          class="Icon Icon--small Icon--secondary Icon--trimmed AccordionHeader__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 9 18"
          width="1em"
        >
          <path
            d="M1.1 5.9l3.4 3.4 3.4-3.4 1.1 1-4.5 4.5L0 6.9l1.1-1z"
          />
          <path
            d="M0 0h9v18H0V0z"
            fill="none"
          />
        </svg>
        Accordion Title
      </button>
    </h2>
    <div
      aria-hidden="true"
      aria-labelledby="accordion--3"
      class="AccordionPanel"
      id="accordion-panel--3"
      role="region"
    >
      Accordion content
    </div>
  </li>
</ul>
`;
